[gd_scene load_steps=2 format=3 uid="uid://e213f7bfvlgd"]

[ext_resource type="Script" path="res://NavigationOnly/Scripts/MapList/NewMapView.gd" id="1_iog2n"]

[node name="CreateNewMapView" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_iog2n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "File Name: "

[node name="FileNameInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0.686275)
layout_mode = 2
text = ".mn8a"

[node name="CreateMapButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Map"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Import Map Data (Optional):"

[node name="MapDataInput" type="TextEdit" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
wrap_mode = 1

[node name="ErrorContainer" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ErrorContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ErrorContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ErrorLabel" type="RichTextLabel" parent="VBoxContainer/ErrorContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/CreateMapButton" to="." method="_on_create_map_button_pressed"]
